--- a/app/src/main/res/xml/accessibility_layout.xml
+++ b/app/src/main/res/xml/accessibility_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service
-    android:accessibilityEventTypes="typeViewClicked|typeWindowContentChanged"
+    android:accessibilityEventTypes="typeViewClicked"
     android:accessibilityFeedbackType="feedbackAllMask"
     android:notificationTimeout="100"
     android:canRetrieveWindowContent="true"
